# gtfs_translation_test

./: Cargo.toml
1/: agency.txt  agency_jp.txt  calendar.txt  calendar_dates.txt  fare_attributes.txt  fare_rules.txt  feed_info.txt  pass_attributes.txt  pass_rules.txt  routes.txt  stop_times.txt  stops.txt  translations.txt  trips.txt
src/: main.rs
