[package]
name = "gtfs-translation-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-structures = {git = "https://github.com/catenarytransit/gtfs-structure/", branch = "translations"}
tokio = {version = "1.36.0", features = ["full"]}